<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.haanbin.todayrecode.ui.main.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_home_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/horizontal_space"
            android:text="@{vm.todayDate}"
            android:textSize="@dimen/title_text"
            tools:text="오늘의 기록을 시작하세요!" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_home_today_recode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> vm.onTodayRecodeClick()}"
                        android:orientation="vertical"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:visibility="@{vm.todayRecodeVisible ? View.VISIBLE : View.GONE}">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/home_today_recode_empty"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iv_empty"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/add" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_home_recent_recode_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/show_recent_recode"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_home_today_recode" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_recent_recode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_recent_recode_title">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:onClick="@{() -> vm.onRecentRecodeClick()}"
                        android:orientation="vertical"
                        android:visibility="@{vm.recentRecode == null ? View.VISIBLE : View.GONE}">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/recent_recode_empty"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/recode_go"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="@{vm.recentRecode == null ? View.GONE : View.VISIBLE}"
                        tools:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{vm.recentRecode.displayDate}"
                            android:textSize="16sp"
                            tools:text="2021년 10월 1일" />

                        <kr.co.prnd.readmore.ReadMoreTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@{vm.recentRecode.content}"
                            bind:readMoreColor="@color/blue"
                            bind:readMoreMaxLine="10"
                            bind:readMoreText="...더보기"
                            tools:text="가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴내용가장긴" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_home_time_schedule_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/time_schedule"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_recent_recode" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_time_schedule"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_home_time_schedule_title"
                    app:layout_constraintVertical_bias="0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:onClick="@{() -> vm.onTimeScheduleClick()}"
                        android:orientation="vertical">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/schedule_empty"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/schedule_go"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>