<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.haanbin.todayrecode.ui.main.history.ModifyDialogViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_modify_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:paddingHorizontal="10dp"
                    android:text="@{vm.recodeItem.displayDate}"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="2021년 10월 1일" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/horizontal_space"
                    android:layout_marginTop="5dp"
                    android:background="@color/gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_modify_title" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsv_content"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="20dp"
                    android:fillViewport="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_modify_title">

                    <EditText
                        android:id="@+id/tv_modify_content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="start"
                        android:hint="@string/today_empty"
                        android:padding="10dp"
                        android:text="@={vm.content}"
                        android:textSize="16sp" />
                </androidx.core.widget.NestedScrollView>

                <TextView
                    android:id="@+id/tv_delete_recode_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> vm.confirmClick()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/confirm"
                    android:textColor="@color/blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nsv_content" />

                <TextView
                    android:id="@+id/tv_delete_recode_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> vm.cancelClick()}"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_delete_recode_confirm"
                    app:layout_constraintTop_toTopOf="@id/tv_delete_recode_confirm" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</layout>